# neural_textures

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  forward_pass.h  main.cpp  mlp.h  train.cu  train.h
filter/: LICENSE  catmull_rom.h
tests/: forward_pass_test.cu  forward_pass_test.h
util/: atomic.h  common.h  cuda_util.h  float2.h  float3.h  float4.h  int3.h
